--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "bun run ./src/index.tsx"
   },
   "devDependencies": {
+    "@total-typescript/ts-reset": "^0.5.1",
     "@types/react": "^18.2.28",
     "@types/react-dom": "^18.2.13",
     "bun-types": "latest"
