feat: header validation

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,8 @@
 {
   "autoHide.autoHidePanel": false,
-  "autoHide.autoHideSideBar": false
+  "autoHide.autoHideSideBar": false,
+  "cSpell.words": [
+    "nosniff",
+    "SAMEORIGIN"
+  ]
 }
