--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "html-minifier": "^4.0.0",
     "lucide-react": "^0.286.0",
     "outdent": "^0.8.0",
     "react": "^18.2.0",
