--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {
     "@total-typescript/ts-reset": "^0.5.1",
+    "@types/html-minifier": "^4.0.4",
     "@types/react": "^18.2.28",
     "@types/react-dom": "^18.2.13",
     "bun-types": "latest"
